--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: Hello123!
+      MYSQL_ROOT_PASSWORD: YOUR_PASS_HERE
     ports:
       - 33060:33060
 
